a1/brendan_gordon/TEST_PROGRAMS/invalidtype/remi_bernard/if.min
# if statement with incorrect type
var x: int;
if x - 1.0 then
	x = 1;
endif

